SERVER-72843 Fallback to the classic engine for FilterExpression